# Evaluation_Framework

./: .env.example  .gitignore  Commands.txt  README.md  pyproject.toml  ragprobe_adapter.py
config/: pipeline_config.yaml
eval/: __init__.py  conftest.py  test_agent.py  test_chunking.py  test_e2e_pipeline.py  test_generation.py  test_retrieval.py
src/: __init__.py  config.py  llm_provider.py
src/embed/: __init__.py  embedder.py
src/extract/: __init__.py  github_extractor.py
src/mcp/: __init__.py  server.py
src/rag/: __init__.py  pipeline.py
src/transform/: __init__.py  chunker.py
