[project]
name = "ai-pipeline-eval"
version = "0.1.0"
description = "AI Systems Engineering Pipeline with DeepEval CI/CD Evaluation"
requires-python = ">=3.11"
dependencies = [
    "deepeval>=4.0.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
    "tiktoken>=0.7.0",
    "langchain-text-splitters>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["eval"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
